--- a/src/scss/components/_company.scss
+++ b/src/scss/components/_company.scss
@@ -28,6 +28,11 @@
 		background-color: $dark-gray;
 		margin: 30px auto;
 	}
+	&.beliefs, &.why {
+		p, span {
+			text-align: center;
+		}
+	}
 	.beliefs {
 		p {
 			font-family: $bFont;
