--- a/statamic/_themes/main/templates/company.html
+++ b/statamic/_themes/main/templates/company.html
@@ -11,7 +11,7 @@
 		<div class="company beliefs">
 			<span class="company-title">OUR BELIEFS</span>
 			<div class="divider"></div>
-			<p>{{ beliefs }}</p>
+			<span>{{ beliefs }}</span>
 		</div>
 	</section>
 	<section>
