--- a/statamic/_themes/main/templates/reports.html
+++ b/statamic/_themes/main/templates/reports.html
@@ -19,7 +19,7 @@
 
 			<a class="report-expander expander-next green centered" href="">
 				<i class="fa fa-plus-circle light-gray large"></i>
-				<span class="large light-gray">More Reports</span>
+				<span class="large">More Reports</span>
 			</a>
 
 			<ul style="display: none" class="grid-constrained">
