--- a/statamic/_themes/main/templates/services.html
+++ b/statamic/_themes/main/templates/services.html
@@ -34,7 +34,7 @@
 							<div class="quote">
 							{{ if main }}
 								<div class="quote-content">
-									<span class="quote-symbol left">{{ theme:partial src="svg/quote_up" }}</span>{{ main }}<span class="quote-symbol right">{{ theme:partial src="svg/quote_down" }}</span>
+									&ldquo;{{ main }}&rdquo;
 								</div>
 							{{ endif }}
 							{{ if logo }}
