--- a/src/scss/components/_agent_individual.scss
+++ b/src/scss/components/_agent_individual.scss
@@ -9,7 +9,8 @@
 			margin-right: auto;
 		}
 		.agent-name {
-			@include hlmedium($hFontM);
+			@include hlmedium($hFontB);
+			margin-top: 10px;
 		}
 		svg {
 			height: 25px;
@@ -52,10 +53,8 @@
 			@include span (last 9 of 9 );
 			
 		}
-		h1 {
-			font-size: 47px;
-			margin-top: 0;
-			margin-bottom: $bPadding;
+		h2 {
+			margin-bottom: 60px;
 		}
 		p:first-of-type, span:first-of-type {
 			margin-top: 0;
@@ -69,10 +68,14 @@
 		}
 		.green-specs {
 			margin-bottom: $bPadding;
-			h4 {
+			h3 {
 				padding-bottom: 20px;
 				border-bottom: 1px solid $text-green;
 				margin-bottom: $bPadding;
+				font-size: 16px;
+				font-family: $bFont;
+				font-weight: 700;
+				text-transform: uppercase;
 			}
 			.press {
 				@include clearfix;
