--- a/src/scss/components/_blog_entry.scss
+++ b/src/scss/components/_blog_entry.scss
@@ -20,10 +20,14 @@
 	.main-image {
 		margin: 30px 0;
 	}
-	.blog-left {
-		border-bottom: 1px solid $modal-text;
-		padding-bottom: 30px;
+	h2 {
+		margin-bottom: 10px;
 	}
+	// .blog-left {
+	// 	border-bottom: 1px solid $modal-text;
+	// 	padding-bottom: 30px;
+
+	// }
 	p:first-of-type::first-letter {
 		float: left; 
 		color: $text-green; 
