--- a/src/scss/modules/_quotes.scss
+++ b/src/scss/modules/_quotes.scss
@@ -5,10 +5,12 @@
 	font-size: 14px;
 	line-height: 20px;
 	text-transform: uppercase;
+	font-weight: 700;
+	color: $quote-gray;
 }
 
 .description {
-	font-weight: 100;
+	
 }
 
 .quote {
