--- a/statamic/_themes/main/partials/featured_post.html
+++ b/statamic/_themes/main/partials/featured_post.html
@@ -1,7 +1,7 @@
 <div class="featured">
 	<a href="{{ url }}" class="featured-image" style="background-image: url( {{ path src="{{ main_image }}" }} );"><div class="mask"></div></a>
 	<div class="post-details">
-		<span class="featured-title">FEATURED POST</span>
+		<span class="blog-header">FEATURED POST</span>
 		<a href="{{ url }}"><h3>{{ title}}</h3></a>
 		<span class="date">Posted {{ date }} by </span>
 		{{ relate:author }}
