--- a/statamic/_themes/main/templates/faq.html
+++ b/statamic/_themes/main/templates/faq.html
@@ -1,6 +1,6 @@
 
 <div class="faq-header">
-	<div class="container">Frequently Asked Questions</div>
+	<div class="container"><h2>Frequently Asked Questions</h2></div>
 </div>
 
 <section class="leading faq">
