--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -4994,7 +4994,7 @@ footer .footer-divider .social a i {
   margin: 0; }
 
 .costs ul {
-  list-style-type: circle;
+  list-style-type: disc;
   margin: 10px 0; }
 
 .costs ul li {
