--- a/statamic/_themes/main/templates/neighborhood.html
+++ b/statamic/_themes/main/templates/neighborhood.html
@@ -1,4 +1,4 @@
-	<section class="hero small leading dark" style="background-image: url( {{ path src="{{ hero_image }}" }} );">
+	<section class="hero leading dark" style="background-image: url( {{ path src="{{ hero_image }}" }} );">
 		<h1>{{ tag_line }}</h1>
 		<h3>{{ sub_tag_line}}</h3>
 	</section>
