--- a/statamic/_themes/main/templates/reports.html
+++ b/statamic/_themes/main/templates/reports.html
@@ -1,4 +1,4 @@
-<section class="hero small leading dark">
+<section class="hero leading dark">
 	<h1>{{ header }}</h1>
 	<h3>{{ sub_header }}</h3>
 </section>
