--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -127,6 +127,7 @@ $fontHuge: 70px;
 @mixin hhuge {
     font-family: $hFontBI;
     font-size: $fontHuge;
+    line-height: 1.5em;
 }
 
 @mixin hxxlarge {
@@ -173,6 +174,7 @@ $fontHuge: 70px;
 @mixin bbase {
     font-size: $fontBase;
     font-family: $bFont;
+    line-height: 1.625*$fontBase;
 }
 
 @mixin bbasebold {
