--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -7,18 +7,13 @@ footer {
 		padding-top: 40px;
 		padding-bottom: 40px;
 	}
-	h3,h4 {
-		font-family: $bFont;
+	div, a {
+		@include bbase;
+		display: block;
 		margin: 0;
-		font-size: 18px;
-		line-height: 24px;
-		font-weight: 300;
 	}
 	li {
 		display: block;
-	}
-	h3 {
-		margin-bottom: 10px;
 	}
 	.social {
 		a {
