--- a/statamic/_themes/main/partials/footer.html
+++ b/statamic/_themes/main/partials/footer.html
@@ -1,22 +1,20 @@
 <footer class="dark_gray">
 	<div class="container">
 		<div class="grid-3">
-			<ul>
-				<li><a href="{{ _site_url }}/neighborhoods">Neighborhoods</a></li>
-				<li><a href="{{ _site_url }}/reports">Reports</a></li>
-				<li><a href="{{ _site_url }}/faq">FAQ</a></li>
-			</ul>		
+			<a href="{{ _site_url }}/neighborhoods">Neighborhoods</a>
+			<a href="{{ _site_url }}/reports">Reports</a>
+			<a href="{{ _site_url }}/faq">FAQ</a>
 		</div>
 		<div class="grid-3">
 			<a href="{{ globals:map_url}}" target="_blank">
-				<h4>{{ globals:address_line1 }}</h4>
-				<h4>{{ globals:address_line2 }}</h4>
+				<div>{{ globals:address_line1 }}</div>
+				<div>{{ globals:address_line2 }}</div>
 			</a>
-				<h4>{{ globals:phone }}</h4>
-				<h4>{{ globals:email_contact }}</h4>
+			<div>{{ globals:phone }}</div>
+			<a href="mailto:{{ globals:email_contact }}">{{ globals:email_contact }}</a>
 		</div>
 		<div class="grid-3">
-			<h3>SIGN UP FOR EMAIL UPDATES</h3>
+			<div>Sign up for email updates</div>
 			<form class="email-signup">
 				<input type="text" placeholder="type email address"></input>
 				<button type="submit">Submit</button>
@@ -24,14 +22,14 @@
 		</div>
 
 		<div class="grid-3">
-			<h3>Exclusive Affiliate of</h3>
+			<div>Exclusive Affiliate of</div>
 			<a target="_blank" href="http://www.beauchamp.co.uk/en/">Beauchamp Logo</a>
 		</div>
 
 	</div>
 	<div class="footer-divider">
 	<div class="container">
-		<p>&copy; {{ current_date format="Y"}} Leslie J. Garfield &amp; Co., Inc. All Rights Reserved.</p>
+		<div>&copy; {{ current_date format="Y"}} Leslie J. Garfield &amp; Co., Inc. All Rights Reserved.</div>
 		<div class="social">
 			<a href="{{ globals:facebook }}" target="_blank">
 					<i class="fa fa-facebook"></i>
