--- a/statamic/_themes/main/templates/reports.html
+++ b/statamic/_themes/main/templates/reports.html
@@ -1,7 +1,7 @@
-<section class="hero leading dark">
+<section class="hero leading dark" {{ if hero_image }} style="background-image: url( {{ path src="{{ hero_image }}" }} );" {{ endif }}>
 	<h1>{{ header }}</h1>
-	<h3>{{ sub_header }}</h3>
-</section>
+	{{ if sub_header }}<h3>{{ sub_header }}</h3>{{ endif }}
+</section>	
 <section class="bg-darkest-seafoam">
 	<div class="container reports">
 		<div class="section-title">OUR LATEST REPORTS</div>
