--- a/src/scss/components/_blog_overview.scss
+++ b/src/scss/components/_blog_overview.scss
@@ -7,7 +7,7 @@
 		position: relative;
 	}
 	.featured {
-		background-color: $dark-bg-seafoam;
+		background-color: $bg-seafoam;
 		@include span(full no-gutter);
 		@include clearfix;
 	}
