--- a/src/scss/components/_green_specs.scss
+++ b/src/scss/components/_green_specs.scss
@@ -1,6 +1,6 @@
 	.green-specs {
 		padding: 30px;
-		background-color: $lightest-green;
+		background-color: $bg-seafoam;
 		@include span(full no-gutter);
 		@include clearfix;
 
