--- a/statamic/_themes/main/templates/company.html
+++ b/statamic/_themes/main/templates/company.html
@@ -2,7 +2,7 @@
 	<h1>{{ header }}</h1>
 	{{ if sub_header }}<h3>{{ sub_header }}</h3>{{ endif }}
 </section>	
-<section class="bg-darkest-seafoam">
+<section class="bg-seafoam">
 	<div class="container">
 		<div class="company beliefs">
 			<span class="company-title">OUR BELIEFS</span>
