--- a/src/scss/modules/_property_tiles.scss
+++ b/src/scss/modules/_property_tiles.scss
@@ -9,6 +9,11 @@
 		position: relative;
 		@include clearfix;
 	}
+		&:hover {
+			.preview-image {
+				transform: scale(1.1);
+			}
+		}
 }
 
 .carousel_tile_1 {
@@ -33,12 +38,22 @@
 	flex-flow: row nowrap;
 	position: relative;
 	background-color: #fff;
-	.preview-image {
-		height: 300px;
+	.image-wrap {
 		@include span(4 of 8 no-gutter);
+		position: relative;
+		overflow: hidden;
+		height: 300px;
+
+	}
+	.preview-image {
+		height: 100%;
+		width: 100%;
+		transition: all 300ms ease-in-out;
+		position: absolute;
 		background-color: $light-gray;
 		background-size: cover;
 		text-align: center;
+
 	}
 	&.property {
 		padding: 10px;
