--- a/statamic/_themes/main/partials/property_tile.html
+++ b/statamic/_themes/main/partials/property_tile.html
@@ -10,7 +10,9 @@
 {{ endif }}
 <div>
 	<a href="{{ url }}" class="property_box slick">
-		<div class='preview-image' style='background-image: url( {{ path src='{{ preview_image }}' }} );'></div>
+		<div class="image-wrap">
+			<div class='preview-image' style='background-image: url( {{ path src='{{ preview_image }}' }} );'>
+		</div>
 		<div class="property_tile_info">
 			<div class="top-info">
 				<span class="prop-title">{{ title }}{{if apartment }}, {{ apartment }}{{ endif }}</span>
