--- a/statamic/_themes/main/templates/reports.html
+++ b/statamic/_themes/main/templates/reports.html
@@ -2,7 +2,7 @@
 	<h1>{{ header }}</h1>
 	{{ if sub_header }}<h3>{{ sub_header }}</h3>{{ endif }}
 </section>	
-<section class="bg-darkest-seafoam">
+<section class="bg-seafoam">
 	<div class="container reports">
 		<div class="section-title">OUR LATEST REPORTS</div>
 		<ul class="grid-constrained report-header">
