--- a/statamic/_themes/main/partials/property_tile.html
+++ b/statamic/_themes/main/partials/property_tile.html
@@ -12,6 +12,7 @@
 	<a href="{{ url }}" class="property_box slick">
 		<div class="image-wrap">
 			<div class='preview-image' style='background-image: url( {{ path src='{{ preview_image }}' }} );'>
+			</div>
 		</div>
 		<div class="property_tile_info">
 			<div class="top-info">
