--- a/statamic/_themes/main/partials/footer.html
+++ b/statamic/_themes/main/partials/footer.html
@@ -23,7 +23,7 @@
 
 		<div class="grid-3">
 			<div>Exclusive Affiliate of</div>
-			<a target="_blank" href="http://www.beauchamp.co.uk/en/">Beauchamp Logo</a>
+			<a class="beauchamp" target="_blank" href="http://www.beauchamp.co.uk/en/">{{ theme:partial src="svg/beauchamp_footer" }}</a>
 		</div>
 
 	</div>
