--- a/statamic/_themes/main/templates/company.html
+++ b/statamic/_themes/main/templates/company.html
@@ -39,7 +39,7 @@
 			<div class="company inner-content">
 				<span class="company-title">OUR INTERNATIONAL PARTNER</span>
 				<div class="divider"></div>
-				<div><img src="{{ path src="{{ international_image }}" }}" ></div>
+				<div>{{ theme:partial src="svg/beauchamp_logo" }}</div>
 				<div class="divider"></div>
 				<div></div>
 				{{ international }}
