--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -93,7 +93,7 @@
 		<section class="circle-icon light-gray-bg" id="featured-properties">
 		<div class="circle-leader">
 			<div class="circle light-gray-bg">
-				{{ theme:partial src="svg/home_building" }}
+				{{ theme:partial src="svg/international" }}
 			</div>
 			<h4>FEATURED INTERNATIONAL PROPERTIES</h4>
 		</div>
