--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -26,6 +26,9 @@ footer {
 		border: 1px solid $light-font-color;
 		border-radius: 50%;
 	}
+	.beauchamp svg {
+		width: 200px;
+	}
 	.footer-divider {
 		border-top: 1px solid darken($light-font-color,20%)	;
 		padding-top: 10px;
