--- a/statamic/_themes/main/partials/svg/home_building.html
+++ b/statamic/_themes/main/partials/svg/home_building.html
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <svg width="116px" height="116px" viewBox="0 0 116 116" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
     <!-- Generator: Sketch 3.3 (11970) - http://www.bohemiancoding.com/sketch -->
-    <title>Home_Building</title>
+    <title>home_building</title>
     <desc>Created with Sketch.</desc>
     <defs></defs>
     <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
-        <g id="Home_Building" sketch:type="MSLayerGroup" transform="translate(-422.000000, -222.000000)" fill="#A7A4A4">
-            <g id="Building" transform="translate(422.000000, 222.000000)" sketch:type="MSShapeGroup">
-                <g id="Group" transform="translate(43.000000, 22.000000)">
-                    <path d="M29.5,71.3 L0.5,71.3 L0.5,-2.84217094e-14 L29.5,-2.84217094e-14 L29.5,71.3 L29.5,71.3 Z M3.8,68 L26.2,68 L26.2,3.3 L3.8,3.3 L3.8,68 L3.8,68 Z" id="Shape"></path>
-                    <rect id="Rectangle-path" x="10.7" y="55.6" width="7.1" height="12.5"></rect>
-                    <rect id="Rectangle-path" x="7.1" y="35.7" width="5.3" height="9.3"></rect>
-                    <rect id="Rectangle-path" x="17.4" y="35.7" width="5.3" height="9.3"></rect>
-                    <rect id="Rectangle-path" x="7.1" y="23" width="5.3" height="9.3"></rect>
-                    <rect id="Rectangle-path" x="17.4" y="23" width="5.3" height="9.3"></rect>
-                    <rect id="Rectangle-path" x="7.1" y="10.2" width="5.3" height="9.3"></rect>
-                    <rect id="Rectangle-path" x="17.4" y="10.2" width="5.3" height="9.3"></rect>
-                </g>
-                <path d="M58,115.5 C26.3,115.5 0.5,89.7 0.5,58 C0.5,26.3 26.3,0.5 58,0.5 C89.7,0.5 115.5,26.3 115.5,58 C115.5,89.7 89.7,115.5 58,115.5 L58,115.5 Z M58,6 C29.3,6 6,29.3 6,58 C6,86.7 29.3,110 58,110 C86.7,110 110,86.7 110,58 C110,29.3 86.7,6 58,6 L58,6 Z" id="Shape"></path>
-            </g>
+        <g id="home_building" sketch:type="MSLayerGroup" fill="#404041">
+            <path d="M72.5,93.3 L43.5,93.3 L43.5,22 L72.5,22 L72.5,93.3 L72.5,93.3 Z M46.8,90 L69.2,90 L69.2,25.3 L46.8,25.3 L46.8,90 L46.8,90 Z" id="Shape" sketch:type="MSShapeGroup"></path>
+            <rect id="Rectangle-path" sketch:type="MSShapeGroup" x="53.7" y="77.6" width="7.1" height="12.5"></rect>
+            <rect id="Rectangle-path" sketch:type="MSShapeGroup" x="50.1" y="57.7" width="5.3" height="9.3"></rect>
+            <rect id="Rectangle-path" sketch:type="MSShapeGroup" x="60.4" y="57.7" width="5.3" height="9.3"></rect>
+            <rect id="Rectangle-path" sketch:type="MSShapeGroup" x="50.1" y="45" width="5.3" height="9.3"></rect>
+            <rect id="Rectangle-path" sketch:type="MSShapeGroup" x="60.4" y="45" width="5.3" height="9.3"></rect>
+            <rect id="Rectangle-path" sketch:type="MSShapeGroup" x="50.1" y="32.2" width="5.3" height="9.3"></rect>
+            <rect id="Rectangle-path" sketch:type="MSShapeGroup" x="60.4" y="32.2" width="5.3" height="9.3"></rect>
+            <path d="M58,115.5 C26.3,115.5 0.5,89.7 0.5,58 C0.5,26.3 26.3,0.5 58,0.5 C89.7,0.5 115.5,26.3 115.5,58 C115.5,89.7 89.7,115.5 58,115.5 L58,115.5 L58,115.5 Z M58,6 C29.3,6 6,29.3 6,58 C6,86.7 29.3,110 58,110 C86.7,110 110,86.7 110,58 C110,29.3 86.7,6 58,6 L58,6 L58,6 Z" id="Shape" sketch:type="MSShapeGroup"></path>
         </g>
     </g>
 </svg>
