--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -4480,10 +4480,6 @@ footer .footer-divider .social a i {
   display: table;
   clear: both; }
 
-.carousel_tile:hover .preview-image, .property_tile:hover .preview-image {
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1); }
-
 .carousel_tile_1 {
   margin-left: 33.33333%;
   box-sizing: border-box;
@@ -4517,6 +4513,10 @@ footer .footer-divider .social a i {
   flex-flow: row nowrap;
   position: relative;
   background-color: #fff; }
+
+.property_box:hover .preview-image {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1); }
 
 .property_box .image-wrap {
   box-sizing: border-box;
