euros and pounds

--- a/statamic/_themes/main/partials/property_card.html
+++ b/statamic/_themes/main/partials/property_card.html
@@ -14,7 +14,17 @@
 			<div class="top-info">
 				<span class="prop-title">{{ title }}{{if apartment }}, {{ apartment }}{{ endif }}</span>
 				<div class="spacer"></div>
-				<span class="prop-price">${{ price|format_number }}</span>
+				<span class="prop-price">
+				{{ if currency|not_empty }}
+				{{ if currency == "sterling" }}
+				&#163;{{ price|format_number }}
+				{{ elseif currency == "euro" }}
+				&#128;{{ price|format_number }}
+				{{ endif }}
+				{{ else }}
+				${{ price|format_number }}
+				{{ endif }}
+				</span>
 				<div class="spacer"></div>
 				<span class="prop-details">{{ property_type }}</span>
 				{{ if sqft|not_empty }}
