--- a/statamic/_themes/main/partials/footer.html
+++ b/statamic/_themes/main/partials/footer.html
@@ -27,10 +27,11 @@
 		</div>
 
 	</div>
-	<div class="footer-divider">
+	
+	<div class="footer-divider"></div>
 	<div class="container">
-		<div>&copy; {{ current_date format="Y"}} Leslie J. Garfield &amp; Co., Inc. All Rights Reserved.</div>
-		<div class="social">
+		<div class="grid-6">&copy; {{ current_date format="Y"}} Leslie J. Garfield &amp; Co., Inc. All Rights Reserved.</div>
+		<div class="grid-6 social">
 			<a href="{{ globals:facebook }}" target="_blank">
 					<i class="fa fa-facebook"></i>
 			</a>
