--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -26,28 +26,20 @@ footer {
 		border: 1px solid $light-font-color;
 		border-radius: 50%;
 	}
-	.beauchamp svg {
-		width: 255px;
+	.beauchamp {
+		text-align: right;
+		svg {
+			width: 255px;
+		}
 	}
 	.footer-divider {
 		border-top: 1px solid darken($light-font-color,20%)	;
-		padding-top: 10px;
-		padding-bottom: 10px;
-		.container {
-			padding: 0;
-		}
-		
-		p {
-			font-weight: 300;
-			@include span(6 of 12);
-			font-family: $bFont;
-		}
-		.social {
-			@include span(last 6 of 12);
-			text-align: right;
-			a i {
-				font-size: 24px;
-			}
+	}
+	.social {
+		text-align: right;
+		margin-top: 0;
+		a i {
+			font-size: 24px;
 		}
 	}
 }
