--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -26,7 +26,11 @@ footer {
 		border: 1px solid $light-font-color;
 		border-radius: 50%;
 	}
+	form {
+		margin-top: 10px;
+	}
 	.beauchamp {
+		margin-top: 10px;
 		svg {
 			width: 255px;
 		}
