--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -2799,6 +2799,12 @@ footer .fa-inverse {
   border: 1px solid #999999;
   border-radius: 50%; }
 
+footer form {
+  margin-top: 10px; }
+
+footer .beauchamp {
+  margin-top: 10px; }
+
 footer .beauchamp svg {
   width: 255px; }
 
