--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -33,7 +33,9 @@ footer {
 		margin-top: 10px;
 		svg {
 			width: 255px;
-			z-index: 11;
+			* {
+				z-index: 10;
+			}
 		}
 	}
 	.footer-divider {
